feat: Rename project to Baba AI Assistant
Refactor the project name and associated metadata to reflect the rebranding to "Baba AI Assistant". This includes updating package.json, index.html, metadata.json, and related components to use the new name consistently.

Additionally, this commit introduces the following improvements:
- Enables web search tool in Gemini configuration for more up-to-date responses.
- Adds a `sources` field to `ChatMessage` type for grounding sources.
- Enhances the `Demo` component with mock diagnostic statistics and remote command handling.
- Refines the `constants.tsx` with updated step descriptions and tips for the S7582 transformation.
- Introduces basic scrollbar styling for a better user experience.
- Adjusts the initial greeting message in the `Demo` component.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-assistant-on-android-phone-samsung-galaxy-s-duos-2-s7582",
+  "name": "baba-ai-assistant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
